--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -6,7 +6,7 @@
       <h2>Welcome to <span>Bhuikhel Youth Club</span></h2>
       <p></p>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">About Tournament</a>
+        <a href="/tournament/" class="btn-get-started scrollto">About Tournament</a>
         <a href="https://www.youtube.com/watch?v=thYuSdMjKxQ&ab_channel=7mlc" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Training video collection</span></a>
       </div>
     </div>
