--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -258,8 +258,8 @@ section {
   font-weight: 500;
 }
 
-.header .btn-getstarted,
-.header .btn-getstarted:focus {
+.btn-getstarted,
+.btn-getstarted:focus {
   font-size: 16px;
   color: var(--color-white);
   background: var(--color-primary);
@@ -269,16 +269,16 @@ section {
   font-family: var(--font-secondary);
 }
 
-.header .btn-getstarted:hover,
-.header .btn-getstarted:focus:hover {
+.btn-getstarted:hover,
+.btn-getstarted:focus:hover {
   color: var(--color-white);
   background: rgba(var(--color-primary-rgb), 0.85);
 }
 
 @media (max-width: 1279px) {
 
-  .header .btn-getstarted,
-  .header .btn-getstarted:focus {
+  .btn-getstarted,
+  .btn-getstarted:focus {
     margin-right: 50px;
   }
 }
@@ -3280,4 +3280,12 @@ section {
 .footer .footer-legal .social-links a:hover {
   background: var(--color-primary);
   text-decoration: none;
+}
+
+.single {
+  padding-top: 100px;
+}
+
+.mb-24  {
+  margin-bottom: 24px;
 }
