--- a/themes/netlify-basic/layouts/partials/head.html
+++ b/themes/netlify-basic/layouts/partials/head.html
@@ -19,23 +19,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
   
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   
     <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-    <link href="assets/css/variables.css" rel="stylesheet">
-    <!-- <link href="assets/css/variables-blue.css" rel="stylesheet"> -->
-    <!-- <link href="assets/css/variables-green.css" rel="stylesheet"> -->
-    <!-- <link href="assets/css/variables-orange.css" rel="stylesheet"> -->
-    <!-- <link href="assets/css/variables-purple.css" rel="stylesheet"> -->
-    <!-- <link href="assets/css/variables-red.css" rel="stylesheet"> -->
-    <!-- <link href="assets/css/variables-pink.css" rel="stylesheet"> -->
+    <link href="/assets/css/variables.css" rel="stylesheet">
+    <!-- <link href="/assets/css/variables-blue.css" rel="stylesheet"> -->
+    <!-- <link href="/assets/css/variables-green.css" rel="stylesheet"> -->
+    <!-- <link href="/assets/css/variables-orange.css" rel="stylesheet"> -->
+    <!-- <link href="/assets/css/variables-purple.css" rel="stylesheet"> -->
+    <!-- <link href="/assets/css/variables-red.css" rel="stylesheet"> -->
+    <!-- <link href="/assets/css/variables-pink.css" rel="stylesheet"> -->
   
     <!-- Template Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
   
     <!-- =======================================================
     * Template Name: HeroBiz - v2.2.0
