--- a/themes/netlify-basic/layouts/partials/header.html
+++ b/themes/netlify-basic/layouts/partials/header.html
@@ -2,16 +2,16 @@
 <header id="header" class="header fixed-top" data-scrollto-offset="0">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+      <a href="/" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Bhuikhel Youth club</h1>
+        <h1>BYC</h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
 
-          <li><a href="#"><span>Home</span></a>
+          <li><a href="/"><span>Home</span></a>
             
           </li>
 
@@ -24,7 +24,7 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <a class="btn-getstarted scrollto" href="index.html#about">Tournament</a>
+      <a class="btn-getstarted scrollto" href="/tournament/">Tournament</a>
 
     </div>
   </header><!-- End Header -->
