--- a/themes/netlify-basic/layouts/partials/header.html
+++ b/themes/netlify-basic/layouts/partials/header.html
@@ -15,9 +15,9 @@
             
           </li>
 
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a class="nav-link scrollto" href="index.html#about">About</a></li> -->
+          <!-- <li><a class="nav-link scrollto" href="index.html#team">Team</a></li> -->
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
