--- a/themes/netlify-basic/layouts/partials/header.html
+++ b/themes/netlify-basic/layouts/partials/header.html
@@ -15,11 +15,11 @@
             
           </li>
 
-          <!-- <li><a class="nav-link scrollto" href="index.html#about">About</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="index.html#team">Team</a></li> -->
+          <!-- <li><a class="nav-link scrollto" href="/#about">About</a></li> -->
+          <!-- <li><a class="nav-link scrollto" href="/#team">Team</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           
-          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
