--- a/themes/netlify-basic/layouts/_default/single.html
+++ b/themes/netlify-basic/layouts/_default/single.html
@@ -3,7 +3,11 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                
+                <img src="/assets/img/poster.jpg" alt="" class="img-float">
+                
                 {{.Content}}
+                </div>
             </div>
         </div>
     </div>
